[workspace]
members = ["miko", "miko-core", "miko-macros"]
resolver = "3"

[workspace.dependencies]
miko-core = { path = "miko-core", version = "0.1.3" }
miko-macros = { path = "miko-macros", version = "0.1.2", features = ["full"] }

[workspace.metadata.release]
# 通用配置，只能放这些字段
tag-name = "v{{version}}"
push = true
publish = true
allow-branch = ["main", "master"]
tag-message = "Release version {{version}}"
consolidate-commits = true
pre-release-commit-message = "chore: release {{version}}"
