[package]
name = "miko-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Macros for miko"
repository = "https://github.com/miko-rs/miko"



[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = "2.0.106"
miko-core = { workspace = true }