[package]
name = "miko-macros"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Macros for miko"
repository = "https://github.com/isyuah/miko"



[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["extra-traits", "full"] }
miko-core = { workspace = true }
hyper = "1.7.0"
utoipa = { version = "5", optional = true }

[features]
auto = []
utoipa = ["dep:utoipa"]
full = ["auto", "utoipa"]
