[package]
name = "miko"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A web framework for Rust"
repository = "https://github.com/miko-rs/miko"



[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
http-body-util = "0.1.3"
matchit = "0.8.6"
mime_guess = "2.0.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tower = {version = "0.5.2", features = ["util", "make"]}
tracing = "0.1.41"
miko-core = { workspace = true }
miko-macros = { workspace = true }
hyper = {version = "1.7.0", features = ["server", "http1"]}
hyper-util = {version = "0.1.17", features = ["full"]}
toml = "0.9.7"
anyhow = "1.0.100"

[features]
full = ["inner_log"]
inner_log = []


[[example]]
name = "demo"
required-features = ["full"]

[dev-dependencies]
tracing-subscriber = "0.3.20"
