[package]
name = "miko"
version = "0.3.14"
edition = "2024"
license = "MIT"
description = "A web framework for Rust"
repository = "https://github.com/isyuah/miko"



[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
http-body = "1.0.1"
http-body-util = "0.1.3"
matchit = "0.8.6"
mime_guess = "2.0.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tower = {version = "0.5.2", features = ["util", "make"]}
tracing = "0.1.41"
miko-core = { workspace = true }
miko-macros = { workspace = true, optional = true }
hyper = {version = "1.7.0", features = ["server", "http1"]}
hyper-util = {version = "0.1.17", features = ["full"]}
toml = "0.9.7"
anyhow = "1.0.100"
inventory = {version =  "0.3.21", optional = true }
multer = "3.1.0"
tower-http = { version = "0.6.6", optional = true, features = ["cors"] }
httpdate = {version =  "1.0.3", optional = true }
tokio-util = { version = "0.7.16", features = ["rt"] }
tempfile = "3.23.0"
tokio-stream = "0.1.17"
tungstenite = "0.28.0"
tokio-tungstenite = "0.28.0"
utoipa = { version = "5", optional = true }
garde = { version = "0.20", optional = true, features = ["derive"] }

[features]
default = ["macro", "auto", "ext"]
full = ["default", "utoipa", "validation"]
macro = ["miko-macros"]
auto = ["macro", "miko-macros/auto", "inventory"]
ext = ["tower-http", "httpdate"]
utoipa = ["miko-macros/utoipa", "dep:utoipa"]
validation = ["garde"]

[[example]]
name = "basic"

[[example]]
name = "utoipa_demo"
required-features = ["full"]

[[example]]
name = "validation_test"
required-features = ["full"]

[dev-dependencies]
utoipa-scalar = { version = "0.2", features = ["axum"] }
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.6", features = ["full"] }

[lints.clippy]
new_without_default = "allow"
